--- a/about.html
+++ b/about.html
@@ -62,8 +62,12 @@
             <a href="./season-ne-ostavlay-menya.html" class="lib__title"
               >Цикл "Full Tilt" / "Не оставляй меня":</a
             >
-            <a href="" class="lib__span">1. Full Tilt / Не оставляй меня</a>
-            <a href="" class="lib__span">2. All In / Не дай мне упасть</a>
+            <a href="./book-ne-ostavay-menya.html" class="lib__span"
+              >1. Full Tilt / Не оставляй меня</a
+            >
+            <a href="./book-ne-day-mne-upast.html" class="lib__span"
+              >2. All In / Не дай мне упасть</a
+            >
           </div>
           <div class="lib__item">
             <a href="" class="lib__title">
