--- a/book-ne-day-mne-upast.html
+++ b/book-ne-day-mne-upast.html
@@ -68,7 +68,7 @@
         </p>
       </div>
       <blockquote class="quote">
-        Любящие не встречаются, они с самого начала друг в друге.
+        Можно сколько угодно готовиться к тому, что произойдет когда-нибудь. Но когда это случается – ты никогда не готов.
       </blockquote>
       <div class="bio">
         <p class="bio__desc">
