--- a/season-ne-ostavlay-menya.html
+++ b/season-ne-ostavlay-menya.html
@@ -53,7 +53,7 @@
       </div>
       <div class="season__list">
         <div class="season__item">
-          <a href="" class="popular__item">
+          <a href="./book-ne-ostavay-menya.html" class="popular__item">
             <img src="./img/popular-6.png" alt="" />
             <div class="popular__title">Не оставляй меня</div>
             <span class="popular__subtitle">Эмма Скотт</span>
@@ -77,35 +77,12 @@
         </div>
         <div class="season__item">
           <a href="" class="popular__item">
-            <img src="./img/popular-9.png" alt="" />
+            <img src="./img/popular-9.png" alt="./book-ne-day-mne-upast.html" />
             <div class="popular__title">Не дай мне упасть</div>
             <span class="popular__subtitle">Эмма Скотт</span>
           </a>
           <div class="season__txt">
             <div class="season__title">2</div>
-            <div class="season__desc">
-              Автор бестселлеров USA Today и Wall St. Journal, чьи книги были
-              переведены на пять языков и представлены в Buzzfeed, Huffington
-              Post, New York Daily News и USA Today's Happy Ever After. Ее
-              первый роман MM, "Someday, Someday", выиграл премию Utopia Con в
-              категории ЛГБТК-книга года. Эмма пишет эмоциональные романы с
-              характером, в которых искусство и любовь переплетаются, чтобы
-              лечить, и в которых любовь всегда побеждает. Если вам нравятся
-              эмоционально заряженные истории, которые вырывают ваше сердце и
-              снова соединяют его воедино, с разнообразными персонажами и
-              героями, которые относятся к своим героиням как к золоту, вам
-              понравятся ее романы.
-            </div>
-          </div>
-        </div>
-        <div class="season__item">
-          <a href="" class="popular__item">
-            <img src="./img/popular-10.png" alt="" />
-            <div class="popular__title">Свет между нами</div>
-            <span class="popular__subtitle">Эмма Скотт</span>
-          </a>
-          <div class="season__txt">
-            <div class="season__title">3</div>
             <div class="season__desc">
               Автор бестселлеров USA Today и Wall St. Journal, чьи книги были
               переведены на пять языков и представлены в Buzzfeed, Huffington
