--- a/season-ne-ostavlay-menya.html
+++ b/season-ne-ostavlay-menya.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="season__item">
-          <a href="" class="popular__item">
+          <a href="./book-ne-day-mne-upast.html" class="popular__item">
             <img src="./img/popular-9.png" alt="./book-ne-day-mne-upast.html" />
             <div class="popular__title">Не дай мне упасть</div>
             <span class="popular__subtitle">Эмма Скотт</span>
